--- a/vue/test1.html
+++ b/vue/test1.html
@@ -4,7 +4,115 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
+<script src="https://unpkg.com/vue"></script>
 <body>
+<div id="app">
+    {{message}}
+</div>
+<div id="app-2">
+    <span v-bind:title="message">
+         鼠标悬停几秒钟查看此处动态绑定的提示信息！
+    </span>
+</div>
+<div id="app-3">
+    <p v-if="seen">现在你看到我了</p>
+</div>
+<div id="app-4">
+    <ol>
+        <li v-for="todo in todos">
+            {{todo.text}}
+        </li>
+    </ol>
+</div>
+<div id="app-5">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">逆转消息</button>
+</div>
+<div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message"/>
+</div>
 
+<div id="app-7">
+    <ol>
+        <todo-item
+                v-for = 'item in groceryList'
+                v-bind:todo = 'item'
+                v-bind:key = "item.id">
+        </todo-item>
+    </ol>
+</div>
+<div id="example"></div>
 </body>
+<script>
+    Vue.component('todo-item',{
+        props: ['todo'],
+        template: '<li>{{todo.text}}</li>'
+    })
+    var data = { a: 1};
+    var vm = new Vue({
+        el: '#example',
+        data: data
+    })
+
+    console.log(vm.$el === document.getElementById('example'));
+    vm.$watch('a', function (newVal, oldVal){
+
+    })
+    var app7 = new Vue({
+        el: '#app-7',
+        data: {
+            groceryList: [
+                { id: 0, text: '蔬菜'},
+                { id: 1, text: '奶酪'},
+                { id: 2, text: "随便什么人吃的东西"}
+            ]
+        }
+    })
+    var app6 = new Vue({
+        el: '#app-6',
+        data: {
+            message: 'Hello Vue!'
+        }
+    })
+    var app = new Vue({
+        el:"#app",
+        data:{
+            message:'Hellow Vue!'
+        }
+    })
+    var app2 = new Vue({
+        el:"#app-2",
+        data:{
+            message:"页面加载于" + new Date()
+        }
+    })
+    var app3 = new Vue({
+        el:"#app-3",
+        data:{
+            seen: true
+        }
+    })
+    var app4 = new Vue({
+        el: '#app-4',
+        data: {
+            todos: [
+                { text: '学习 JS'},
+                { text: '学习 Vue'},
+                { text: '去公司装个B'}
+            ]
+        }
+    })
+    var app5 = new Vue({
+        el: '#app-5',
+        data: {
+            message: 'Hello Vue.js'
+        },
+        methods: {
+            reverseMessage: function () {
+                this.message = this.message.split('').reverse().join('')
+            }
+        }
+    })
+</script>
 </html>
